<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/undercromo_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:src="@drawable/ic_chevron_backward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editUserInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about_us_label"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shopLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/shops_label"
            android:textAlignment="center"
            android:textColor="@color/undercromo_gray_placeholder"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editUserInformation" />

        <ImageView
            android:id="@+id/imageMap"
            android:layout_width="255dp"
            android:layout_height="126dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ug_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shopLabel" />

        <TextView
            android:id="@+id/mapLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/miami_map"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/undercromo_map"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/infoLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/locationMiami"
            android:textAlignment="center"
            android:textColor="@color/undercromo_gray_placeholder"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/mapLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/MonToSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/monToSun"
            android:textAlignment="center"
            android:textColor="@color/undercromo_gray_placeholder"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/infoLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/Sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="@color/undercromo_gray_placeholder"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/MonToSat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/lineShopInfo"
            android:layout_width="305dp"
            android:layout_height="2dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/Sun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/ourClothes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/our_clothes"
            android:textAlignment="center"
            android:textColor="@color/undercromo_gray_placeholder"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/lineShopInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/premiumCotton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/premium_cotton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ourClothes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/detailsCotton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/product_features"
            android:textAlignment="center"
            android:textColor="@color/undercromo_gray_placeholder"
            android:textSize="9sp"
            app:layout_constraintTop_toBottomOf="@id/premiumCotton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/madeConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/conditions"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/detailsCotton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/fairConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/conditions_fair"
            android:textAlignment="center"
            android:textColor="@color/undercromo_gray_placeholder"
            android:textSize="9sp"
            app:layout_constraintTop_toBottomOf="@id/madeConditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
